syntax = "proto3";

package pb;

import "register.proto";

option go_package = "github.com/begenov/register-service/pb";


message RequestFile {
    string message = 1;
}

service Register {
    rpc SignUp(RequestRegister) returns (Response) {

    }

    rpc SignIn(RequestSignIn) returns (ResponseToken) {
        
    }

    rpc RefreshToken(RequestToken) returns (ResponseToken) {
    
    }

    rpc UploadFile(RequestFile) returns (FileChunk) {}

}

message FileChunk {
    bytes data = 1;
}
  